<feat> 다국어 지원 기본 구조 구현; 홈 및 페이지네이션 수정 필요

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,15 @@
       {% endfor %}
     {% endif %}
   </ul>
+  <ul class="multi-lang">
+    {% for lang in site.languages %}
+    {% if lang == page.lang %}
+    <li class="active">{{ lang | upcase }}</li>
+    {% else %}
+    <li><a href="{{ lang_stripped_url | prepend: lang | absolute_url }}">{{ lang | upcase }}</a></li>
+    {% endif %}
+    {% endfor %}
+  </ul>
 </div>
 {% endif %}
 
