--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,5 @@
+{% include multilang/get-lang-variables %}
+
 {% if page.author_profile or layout.author_profile or page.sidebar %}
   <div class="sidebar sticky">
   {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
