--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -148,3 +148,35 @@ body {
     }
   }
 }
+
+footer {
+  .page__footer-follow {
+    display: flex;
+    justify-content: space-between;
+
+    .multi-lang {
+      display: flex;
+      justify-content: center;
+      padding: 0;
+      list-style: none;
+  
+      li {
+        font-size: 0.75em;
+  
+        &.active {
+          font-weight: bold !important;
+        }
+  
+        a {
+          color: inherit;
+          text-decoration: none;
+          font-weight: normal !important;
+
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+  }
+}
