<feat> 불필요한 파일 제거 및 스타일 수정

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -131,8 +131,8 @@ body {
       .stage {
         opacity: 0.5;
         &.now {
-            font-weight: bold;
-            opacity: 1;
+          font-weight: bold;
+          opacity: 1;
         }
       }
     }
@@ -148,6 +148,10 @@ body {
       font-style: italic;
     }
   }
+}
+
+.greedy-nav a {
+  margin: 0 0.5rem !important;
 }
 
 footer {
