--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -25,7 +25,7 @@
                 href="{{ link.url | relative_url }}"
                 {% if link.description %} title="{{ link.description }}"{% endif %}
                 {% if link.target %} target="{{ link.target }}"{% endif %}
-              >{{ link.title }}</a>
+              >{{ link.title[page.lang] }}</a>
             </li>
           {%- endfor -%}
         </ul>
